<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/search_top_set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="72dp"
        android:orientation="vertical"
        tools:context=".SearchActivity">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:focusedByDefault="true"
                android:transitionName="search_transition"
                app:iconifiedByDefault="false"
                app:queryHint="Search..." />

            <ImageView
                android:id="@+id/voice_image"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="bottom"
                android:contentDescription="@string/voice_search_content_description"
                android:src="@drawable/ic_baseline_keyboard_voice_24" />


        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/popular_tags"
            android:textSize="16sp" />


        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_football"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/football" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_cricket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cricket" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_covid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/covid_19" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_bitcoin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bitcoin" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/business_stocks" />


        </com.google.android.material.chip.ChipGroup>


        <LinearLayout
            android:id="@+id/search_divide_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/darker_gray"
            android:orientation="vertical" />

        <ListView
            android:id="@+id/search_result_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <TextView
        android:id="@+id/no_search_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_search_results"
        android:textSize="24sp"
        android:visibility="invisible" />


    <ProgressBar
        android:id="@+id/search_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="invisible" />

</RelativeLayout>
